--- a/index.css
+++ b/index.css
@@ -23,10 +23,15 @@ body{
     font-family: 'Roboto', sans-serif;
 }
 header{
-    margin: 0%;
+    /*margin: 0%;
     padding: 0%;
     position: fixed;
-    width: 100%;
+    width: 100%;*/
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
 }
 main{
     padding-top: 10vh;
